--- a/src/views/Docs.scss
+++ b/src/views/Docs.scss
@@ -307,8 +307,7 @@ $sidebar-width: 300px;
           border: 1px solid colors.$gray-800;
 
           &:hover {
-            background-color: colors.$gray-800;
-            border-color: colors.$gray-700;
+            background-color: colors.$gray-iron-900;
           }
 
           .content {
